--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pdf-worker.js", "components/PDFViewer.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pdf-worker.js", "components/PDFViewer.js", "backend/app.js"],
   "exclude": ["node_modules"]
 }
