--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "download-pdf": "^0.1.6",
